Update class feature